<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>org.example</groupId>
    <artifactId>data-pool-manager-maven</artifactId>
    <version>1.0-SNAPSHOT</version>

    <properties>
        <maven.compiler.source>8</maven.compiler.source>
        <maven.compiler.target>8</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>
        <dependencies>
        <dependency>
            <groupId>com.google.code.gson</groupId>
            <artifactId>gson</artifactId>
            <version>2.9.1</version>
        </dependency>
        <dependency>
            <groupId>com.dpm.server</groupId>
            <artifactId>dpm</artifactId>
            <version>1.0</version>
            <scope>system</scope>
            <systemPath>C:/Softwares/mavenrepository/com/dpm/server/dpm.jar</systemPath>
        </dependency>

        <dependency>
            <groupId>org.epics</groupId>
            <artifactId>epics</artifactId>
            <version>1.0</version>
            <scope>system</scope>
            <systemPath>C:/Softwares/mavenrepository/org/epics/pva-phoebus.jar</systemPath>
        </dependency>

        <dependency>
            <groupId>io.grpc</groupId>
            <artifactId>grpc</artifactId>
            <version>1.44.1</version>
            <scope>system</scope>
            <systemPath>C:/Softwares/mavenrepository/io/grpc/grpc-1.44.1.jar</systemPath>
        </dependency>
        <dependency>
            <groupId>com.google.protobuf</groupId>
            <artifactId>protobuf-java</artifactId>
            <version>3.25.2</version>
        </dependency>
            <dependency>
                <groupId>org.junit.jupiter</groupId>
                <artifactId>junit-jupiter-api</artifactId>
                <version>5.10.0</version>
                <scope>test</scope>
            </dependency>            <!-- https://mvnrepository.com/artifact/org.mockito/mockito-core -->
            <dependency>
                <groupId>org.mockito</groupId>
                <artifactId>mockito-core</artifactId>
                <version>4.0.0</version>
                <scope>test</scope>
            </dependency>

            <dependency>
                <groupId>org.powermock</groupId>
                <artifactId>powermock-core</artifactId>
                <version>2.0.9</version>
                <scope>test</scope>
            </dependency>
            <dependency>
                <groupId>org.powermock</groupId>
                <artifactId>powermock-api-mockito2</artifactId>
                <version>2.0.9</version>
                <scope>test</scope>
            </dependency>
            <!-- https://mvnrepository.com/artifact/org.powermock/powermock -->
            <dependency>
                <groupId>org.powermock</groupId>
                <artifactId>powermock</artifactId>
                <version>1.6.6</version>
                <type>pom</type>
            </dependency>
<!--            &lt;!&ndash; https://mvnrepository.com/artifact/net.bytebuddy/byte-buddy &ndash;&gt;-->
<!--            <dependency>-->
<!--                <groupId>net.bytebuddy</groupId>-->
<!--                <artifactId>byte-buddy</artifactId>-->
<!--                <version>1.9.10</version>-->
<!--            </dependency>-->
<!--            &lt;!&ndash; https://mvnrepository.com/artifact/net.bytebuddy/byte-buddy-agent &ndash;&gt;-->
<!--            <dependency>-->
<!--                <groupId>net.bytebuddy</groupId>-->
<!--                <artifactId>byte-buddy-agent</artifactId>-->
<!--                <version>1.14.13</version>-->
<!--                <scope>test</scope>-->
<!--            </dependency>-->


        </dependencies>
</project>